--- a/AddRidePat.html
+++ b/AddRidePat.html
@@ -134,7 +134,7 @@
         }
 
         function respList() {
-            var p = "רגיל";
+            var p = "רכז";
             request = {
                 prefix: p
             }
