--- a/detination.html
+++ b/detination.html
@@ -8,7 +8,7 @@
     <script>
 
         function respList() {
-            var p = "רגיל";
+            var p = "רכז";
             request = {
                 prefix: p
             }
@@ -94,6 +94,7 @@
 </head>
 <body dir="rtl" onload="respList()">
     <div id="addDestination">
+        <div id="resultsDiv"></div>
         <h1>הוספת יעד</h1>
         <table>
             <tr>
