--- a/Volenteers.html
+++ b/Volenteers.html
@@ -38,16 +38,16 @@
 
         }
 
-
         function activate() {
             var p = document.getElementById("prefixText").value;
             request = {
-                prefix : p}
+                prefix: p
+            }
 
             getUserAjax(request, getUserSuccess, getUserFailure);
         }
 
-      
+
         function getUserSuccess(result) {
             people = $.parseJSON(result.d);
 
@@ -62,6 +62,28 @@
         }
 
         function getUserFailure(error) {
+
+        }
+
+
+        function getUser() {
+            var phoneNumber = document.getElementById("phoneNumber").value;
+            request = {
+                phoneNumber: phoneNumber}
+
+            getUserByPhoneNumberAjax(request, getUserByphoneSuccess, getUserByphoneFailure);
+        }
+
+      
+        function getUserByphoneSuccess(result) {
+            user = $.parseJSON(result.d);
+            var name = user.FirstNameH;
+            var lastName = user.LastNameH;
+            str = " " + name + " " +lastName ;
+            document.getElementById("resultsDiv").innerHTML = str;
+        }
+
+        function getUserByphoneFailure(error) {
 
         }
         function getNum(val) {
@@ -157,6 +179,8 @@
 <body dir="rtl" onload="destinationList()">
     <input type="text" id="prefixText" />
     <input type="button" onclick="activate()" value="pressMe" />
+    <input type="text" id="phoneNumber" />
+    <input type="button" onclick="getUser()" value="הבא פרטי מתנדב" />
     <div id="resultsDiv">
     </div>
     <div id="addVol">
